# ACppTemplate

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
ACppTemplate/src/: ACppTemplate.cpp
all/: CMakeLists.txt
cmake/: tools.cmake
include/: ACppTemplate.h
standalone/: CMakeLists.txt
test/: CMakeLists.txt
test/source/: greeter.cpp
